--- a/lms/static/sass/elements/_creative-commons.scss
+++ b/lms/static/sass/elements/_creative-commons.scss
@@ -7,6 +7,7 @@
     url('#{$static-path}/fonts/CreativeCommons/cc.svg#CreativeCommons') format('svg');
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 
 [class^="icon-cc"]::before, [class*=" icon-cc"]::before {
